<resources>
    <string name="app_name">Vibecap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 공통 -->
    <string name="post">게시물</string>
    <string name="comment">댓글</string>
    <string name="go_back">뒤로 가기</string>
    <string name="profile_img">프로필 이미지</string>
    <string name="post_menu">게시물 메뉴</string>
    <string name="comment_menu">댓글 메뉴</string>
    <string name="like">좋아요</string>
    <string name="scrap">스크랩</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="search">검색</string>
    <string name="alarm_history">활동 내역</string>

    <!-- [VIBE] 게시물 메뉴 -->
    <string name="vibe_post_menu_block">게시물 차단하기</string>
    <string name="vibe_post_menu_report">게시물 신고하기</string>
    <string name="vibe_post_menu_link">링크 복사</string>
    <string name="vibe_post_menu_share">게시물 공유하기</string>
    <string name="vibe_post_menu_report_spam">스팸</string>
    <string name="vibe_post_menu_report_sexual_shame">성적 수치심</string>
    <string name="vibe_post_menu_report_hate_speech">혐오 발언</string>
    <string name="vibe_post_menu_report_violent_or_dangerous_group">폭력 또는 위험한 단체</string>
    <string name="vibe_post_menu_report_illegal_ad_or_sale">불법 광고물 및 규제 상품 판매</string>
    <string name="vibe_post_menu_report_infringement_of_intellectual_property_rights">지식재산권 침해</string>
    <string name="vibe_post_menu_report_suggestion_of_suicide">자살, 자해 암시</string>
    <string name="vibe_post_menu_report_etc">기타 문제</string>
    <string name="vibe_post_see_more_comment">댓글 더보기</string>

    <!-- [VIBE] 댓글 메뉴 -->
    <string name="vibe_comment_menu_block">댓글 작성자 차단하기</string>
    <string name="vibe_comment_menu_report">댓글 신고하기</string>

    <!-- [VIBE] 댓글 -->
    <string name="vibe_comment_add_message">댓글을 작성하세요</string>
    <string name="vibe_comment_add">등록</string>
    <string name="vibe_comment_add_sub_comment">답글 달기</string>
    <string name="vibe_comment_add_sub_comment_question">대댓글을 작성하시겠습니까?</string>

    <!-- [VIBE] 검색 -->
    <string name="vibe_search_empty_result">검색 결과가 없습니다</string>
    <string name="vibe_search_hashtag">#해시태그 검색</string>

    <!-- [VIBE] 태그별 더보기 -->
    <string name="vibe_detail_no_posts">게시물이 없습니다</string>

    <!-- [VIBE] 활동 내역 -->
    <string name="mypage_alarm_no_alarms">활동 내역이 없습니다</string>

    <!--[마이페이지] 메뉴-->
    <string name="mypage_post_menu_edit">수정하기</string>
    <string name="mypage_post_menu_delete">삭제하기</string>
    <string name="mypage_post_menu_share">게시물 공유하기</string>


</resources>