<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_mypage_logout_background">

    <TextView
        android:id="@+id/dialog_vibe_comment_add_sub_comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/vibe_comment_add_sub_comment_question"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_vibe_comment_add_sub_comment_cancel"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_vibe_comment_left_btn"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/dialog_vibe_comment_vertical_line_view"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vibe_comment_add_sub_comment_title" />

    <View
        android:id="@+id/dialog_vibe_comment_line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_100"
        app:layout_constraintBottom_toTopOf="@+id/dialog_vibe_comment_add_sub_comment_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/dialog_vibe_comment_vertical_line_view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray_100"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_vibe_comment_add_sub_comment_add"
        app:layout_constraintEnd_toStartOf="@+id/dialog_vibe_comment_add_sub_comment_add"
        app:layout_constraintStart_toEndOf="@+id/dialog_vibe_comment_add_sub_comment_cancel"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vibe_comment_line_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_vibe_comment_add_sub_comment_add"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_vibe_comment_right_btn"
        android:text="@string/ok"
        android:textColor="@color/purple_150"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/dialog_vibe_comment_vertical_line_view"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vibe_comment_add_sub_comment_title" />

</androidx.constraintlayout.widget.ConstraintLayout>