<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VibeSearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vibe_search_top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/vibe_search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_activity_vibe_detail_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vibe_post_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vibe_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/vibe_search_top_bar_layout">

        <EditText
            android:id="@+id/vibe_search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:backgroundTint="@color/black"
            android:hint="@string/vibe_search_hashtag"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="13dp"
            android:paddingEnd="55dp"
            android:paddingBottom="17dp"
            android:privateImeOptions="defaultInputmode=korean"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#ACACAC"
            android:textCursorDrawable="@drawable/et_cursor_drawable"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/vibe_search_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/search"
            android:paddingBottom="9dp"
            android:src="@drawable/ic_activity_vibe_main_search"
            app:layout_constraintBottom_toBottomOf="@+id/vibe_search_et"
            app:layout_constraintEnd_toEndOf="@+id/vibe_search_et"
            app:layout_constraintTop_toTopOf="@+id/vibe_search_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/vibe_search_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:text="@string/vibe_search_empty_result"
        android:textColor="@color/gray_300"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTint="@color/gray_200"
        app:drawableTopCompat="@drawable/ic_activity_vibe_search_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibe_search_top_bar_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vibe_search_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/item_layout_animation"
        android:paddingHorizontal="15dp"
        android:paddingBottom="28dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibe_search_layout"
        app:spanCount="2"
        tools:listitem="@layout/item_vibe_main_all_posts" />

</androidx.constraintlayout.widget.ConstraintLayout>